LexingParsingCOOL/output/COOLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g 2017-10-16 21:26:31

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class COOLParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARROBA", "ASSING", "BOOLEAN", "CASE", "CHAR", "CLASS", "CL_CORCH", "CL_PARENT", "COMA", "COMMENT", "DIGIT", "DIV", "DOUBLEP", "ELSE", "END", "EQ", "ESAC", "ESC_SEQ", "EXPONENT", "FI", "G", "GEQ", "HEX_DIGIT", "ID", "IF", "IMPLICS", "IN", "INHERITS", "ISVOID", "L", "LEQ", "LET", "LOOP", "LOWERCASE", "MINUS", "MULT", "NANARITA", "NEW", "NL", "NOT", "NUMBER", "OCTAL_ESC", "OF", "OP_CORCH", "OP_PARENT", "PLUS", "PNT", "POOL", "STRING", "THEN", "TYPE", "UNICODE_ESC", "UPERCASE", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int ARROBA=4;
	public const int ASSING=5;
	public const int BOOLEAN=6;
	public const int CASE=7;
	public const int CHAR=8;
	public const int CLASS=9;
	public const int CL_CORCH=10;
	public const int CL_PARENT=11;
	public const int COMA=12;
	public const int COMMENT=13;
	public const int DIGIT=14;
	public const int DIV=15;
	public const int DOUBLEP=16;
	public const int ELSE=17;
	public const int END=18;
	public const int EQ=19;
	public const int ESAC=20;
	public const int ESC_SEQ=21;
	public const int EXPONENT=22;
	public const int FI=23;
	public const int G=24;
	public const int GEQ=25;
	public const int HEX_DIGIT=26;
	public const int ID=27;
	public const int IF=28;
	public const int IMPLICS=29;
	public const int IN=30;
	public const int INHERITS=31;
	public const int ISVOID=32;
	public const int L=33;
	public const int LEQ=34;
	public const int LET=35;
	public const int LOOP=36;
	public const int LOWERCASE=37;
	public const int MINUS=38;
	public const int MULT=39;
	public const int NANARITA=40;
	public const int NEW=41;
	public const int NL=42;
	public const int NOT=43;
	public const int NUMBER=44;
	public const int OCTAL_ESC=45;
	public const int OF=46;
	public const int OP_CORCH=47;
	public const int OP_PARENT=48;
	public const int PLUS=49;
	public const int PNT=50;
	public const int POOL=51;
	public const int STRING=52;
	public const int THEN=53;
	public const int TYPE=54;
	public const int UNICODE_ESC=55;
	public const int UPERCASE=56;
	public const int WHILE=57;
	public const int WS=58;

	public COOLParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public COOLParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return COOLParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:8:9: public program : ( class )+ EOF ;
	[GrammarRule("program")]
	public void program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(8, 30);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:8:16: ( ( class )+ EOF )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:8:18: ( class )+ EOF
			{
			DebugLocation(8, 18);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:8:18: ( class )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==CLASS))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:8:19: class
					{
					DebugLocation(8, 19);
					PushFollow(Follow._class_in_program29);
					@class();
					PopFollow();


					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(8, 27);
			Match(input,EOF,Follow._EOF_in_program33); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(8, 30);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return;

	}
	// $ANTLR end "program"

	partial void EnterRule_class();
	partial void LeaveRule_class();

	// $ANTLR start "class"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:2: class : CLASS WS TYPE WS ( INHERITS )? WS TYPE WS OP_CORCH ( wsnl feature_list )? ( wsnl )? CL_CORCH END wsnl ;
	[GrammarRule("class")]
	private void @class()
	{
		EnterRule_class();
		EnterRule("class", 2);
		TraceIn("class", 2);
		try { DebugEnterRule(GrammarFileName, "class");
		DebugLocation(10, 2);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:7: ( CLASS WS TYPE WS ( INHERITS )? WS TYPE WS OP_CORCH ( wsnl feature_list )? ( wsnl )? CL_CORCH END wsnl )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:9: CLASS WS TYPE WS ( INHERITS )? WS TYPE WS OP_CORCH ( wsnl feature_list )? ( wsnl )? CL_CORCH END wsnl
			{
			DebugLocation(10, 9);
			Match(input,CLASS,Follow._CLASS_in_class42); 
			DebugLocation(10, 15);
			Match(input,WS,Follow._WS_in_class44); 
			DebugLocation(10, 18);
			Match(input,TYPE,Follow._TYPE_in_class46); 
			DebugLocation(10, 23);
			Match(input,WS,Follow._WS_in_class48); 
			DebugLocation(10, 26);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:26: ( INHERITS )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_0 = input.LA(1);

			if ((LA2_0==INHERITS))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:27: INHERITS
				{
				DebugLocation(10, 27);
				Match(input,INHERITS,Follow._INHERITS_in_class51); 

				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(10, 38);
			Match(input,WS,Follow._WS_in_class55); 
			DebugLocation(10, 41);
			Match(input,TYPE,Follow._TYPE_in_class57); 
			DebugLocation(10, 46);
			Match(input,WS,Follow._WS_in_class59); 
			DebugLocation(10, 49);
			Match(input,OP_CORCH,Follow._OP_CORCH_in_class61); 
			DebugLocation(10, 58);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:58: ( wsnl feature_list )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			try
			{
				alt3 = dfa3.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:59: wsnl feature_list
				{
				DebugLocation(10, 59);
				PushFollow(Follow._wsnl_in_class64);
				wsnl();
				PopFollow();

				DebugLocation(10, 64);
				PushFollow(Follow._feature_list_in_class66);
				feature_list();
				PopFollow();


				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(10, 79);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:79: ( wsnl )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_0 = input.LA(1);

			if ((LA4_0==NL||LA4_0==WS))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:10:79: wsnl
				{
				DebugLocation(10, 79);
				PushFollow(Follow._wsnl_in_class70);
				wsnl();
				PopFollow();


				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(10, 85);
			Match(input,CL_CORCH,Follow._CL_CORCH_in_class73); 
			DebugLocation(10, 94);
			Match(input,END,Follow._END_in_class75); 
			DebugLocation(10, 98);
			PushFollow(Follow._wsnl_in_class77);
			wsnl();
			PopFollow();


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("class", 2);
			LeaveRule("class", 2);
			LeaveRule_class();
		}
		DebugLocation(11, 2);
		} finally { DebugExitRule(GrammarFileName, "class"); }
		return;

	}
	// $ANTLR end "class"

	partial void EnterRule_feature_list();
	partial void LeaveRule_feature_list();

	// $ANTLR start "feature_list"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:12:2: feature_list : feature ( wsnl feature )* ;
	[GrammarRule("feature_list")]
	private void feature_list()
	{
		EnterRule_feature_list();
		EnterRule("feature_list", 3);
		TraceIn("feature_list", 3);
		try { DebugEnterRule(GrammarFileName, "feature_list");
		DebugLocation(12, 39);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:12:14: ( feature ( wsnl feature )* )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:12:16: feature ( wsnl feature )*
			{
			DebugLocation(12, 16);
			PushFollow(Follow._feature_in_feature_list87);
			feature();
			PopFollow();

			DebugLocation(12, 24);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:12:24: ( wsnl feature )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				try
				{
					alt5 = dfa5.Predict(input);
				}
				catch (NoViableAltException nvae)
				{
					DebugRecognitionException(nvae);
					throw;
				}
				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:12:25: wsnl feature
					{
					DebugLocation(12, 25);
					PushFollow(Follow._wsnl_in_feature_list90);
					wsnl();
					PopFollow();

					DebugLocation(12, 30);
					PushFollow(Follow._feature_in_feature_list92);
					feature();
					PopFollow();


					}
					break;

				default:
					goto loop5;
				}
			}

			loop5:
				;

			} finally { DebugExitSubRule(5); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("feature_list", 3);
			LeaveRule("feature_list", 3);
			LeaveRule_feature_list();
		}
		DebugLocation(12, 39);
		} finally { DebugExitRule(GrammarFileName, "feature_list"); }
		return;

	}
	// $ANTLR end "feature_list"

	partial void EnterRule_feature();
	partial void LeaveRule_feature();

	// $ANTLR start "feature"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:13:2: feature : ID ( WS )? ( attribute | methodefinition ) END ;
	[GrammarRule("feature")]
	private void feature()
	{
		EnterRule_feature();
		EnterRule("feature", 4);
		TraceIn("feature", 4);
		try { DebugEnterRule(GrammarFileName, "feature");
		DebugLocation(13, 51);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:13:9: ( ID ( WS )? ( attribute | methodefinition ) END )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:13:11: ID ( WS )? ( attribute | methodefinition ) END
			{
			DebugLocation(13, 11);
			Match(input,ID,Follow._ID_in_feature102); 
			DebugLocation(13, 14);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:13:14: ( WS )?
			int alt6=2;
			try { DebugEnterSubRule(6);
			try { DebugEnterDecision(6, false);
			int LA6_0 = input.LA(1);

			if ((LA6_0==WS))
			{
				alt6 = 1;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:13:15: WS
				{
				DebugLocation(13, 15);
				Match(input,WS,Follow._WS_in_feature105); 

				}
				break;

			}
			} finally { DebugExitSubRule(6); }

			DebugLocation(13, 20);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:13:20: ( attribute | methodefinition )
			int alt7=2;
			try { DebugEnterSubRule(7);
			try { DebugEnterDecision(7, false);
			int LA7_0 = input.LA(1);

			if ((LA7_0==DOUBLEP))
			{
				alt7 = 1;
			}
			else if ((LA7_0==OP_PARENT))
			{
				alt7 = 2;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 7, 0, input);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:13:21: attribute
				{
				DebugLocation(13, 21);
				PushFollow(Follow._attribute_in_feature110);
				attribute();
				PopFollow();


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:13:31: methodefinition
				{
				DebugLocation(13, 31);
				PushFollow(Follow._methodefinition_in_feature112);
				methodefinition();
				PopFollow();


				}
				break;

			}
			} finally { DebugExitSubRule(7); }

			DebugLocation(13, 48);
			Match(input,END,Follow._END_in_feature115); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("feature", 4);
			LeaveRule("feature", 4);
			LeaveRule_feature();
		}
		DebugLocation(13, 51);
		} finally { DebugExitRule(GrammarFileName, "feature"); }
		return;

	}
	// $ANTLR end "feature"

	partial void EnterRule_attribute();
	partial void LeaveRule_attribute();

	// $ANTLR start "attribute"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:1: attribute : DOUBLEP ( WS )? TYPE ( ( WS )? ASSING ( WS )? expr )? ;
	[GrammarRule("attribute")]
	private void attribute()
	{
		EnterRule_attribute();
		EnterRule("attribute", 5);
		TraceIn("attribute", 5);
		try { DebugEnterRule(GrammarFileName, "attribute");
		DebugLocation(15, 59);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:10: ( DOUBLEP ( WS )? TYPE ( ( WS )? ASSING ( WS )? expr )? )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:13: DOUBLEP ( WS )? TYPE ( ( WS )? ASSING ( WS )? expr )?
			{
			DebugLocation(15, 13);
			Match(input,DOUBLEP,Follow._DOUBLEP_in_attribute125); 
			DebugLocation(15, 21);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:21: ( WS )?
			int alt8=2;
			try { DebugEnterSubRule(8);
			try { DebugEnterDecision(8, false);
			int LA8_0 = input.LA(1);

			if ((LA8_0==WS))
			{
				alt8 = 1;
			}
			} finally { DebugExitDecision(8); }
			switch (alt8)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:22: WS
				{
				DebugLocation(15, 22);
				Match(input,WS,Follow._WS_in_attribute128); 

				}
				break;

			}
			} finally { DebugExitSubRule(8); }

			DebugLocation(15, 27);
			Match(input,TYPE,Follow._TYPE_in_attribute132); 
			DebugLocation(15, 32);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:32: ( ( WS )? ASSING ( WS )? expr )?
			int alt11=2;
			try { DebugEnterSubRule(11);
			try { DebugEnterDecision(11, false);
			int LA11_0 = input.LA(1);

			if ((LA11_0==ASSING||LA11_0==WS))
			{
				alt11 = 1;
			}
			} finally { DebugExitDecision(11); }
			switch (alt11)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:33: ( WS )? ASSING ( WS )? expr
				{
				DebugLocation(15, 33);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:33: ( WS )?
				int alt9=2;
				try { DebugEnterSubRule(9);
				try { DebugEnterDecision(9, false);
				int LA9_0 = input.LA(1);

				if ((LA9_0==WS))
				{
					alt9 = 1;
				}
				} finally { DebugExitDecision(9); }
				switch (alt9)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:34: WS
					{
					DebugLocation(15, 34);
					Match(input,WS,Follow._WS_in_attribute136); 

					}
					break;

				}
				} finally { DebugExitSubRule(9); }

				DebugLocation(15, 39);
				Match(input,ASSING,Follow._ASSING_in_attribute140); 
				DebugLocation(15, 46);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:46: ( WS )?
				int alt10=2;
				try { DebugEnterSubRule(10);
				try { DebugEnterDecision(10, false);
				int LA10_0 = input.LA(1);

				if ((LA10_0==WS))
				{
					alt10 = 1;
				}
				} finally { DebugExitDecision(10); }
				switch (alt10)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:15:47: WS
					{
					DebugLocation(15, 47);
					Match(input,WS,Follow._WS_in_attribute143); 

					}
					break;

				}
				} finally { DebugExitSubRule(10); }

				DebugLocation(15, 52);
				PushFollow(Follow._expr_in_attribute147);
				expr();
				PopFollow();


				}
				break;

			}
			} finally { DebugExitSubRule(11); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("attribute", 5);
			LeaveRule("attribute", 5);
			LeaveRule_attribute();
		}
		DebugLocation(15, 59);
		} finally { DebugExitRule(GrammarFileName, "attribute"); }
		return;

	}
	// $ANTLR end "attribute"

	partial void EnterRule_methodefinition();
	partial void LeaveRule_methodefinition();

	// $ANTLR start "methodefinition"
	// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:17:2: methodefinition : OP_PARENT ( ( WS )? params_list )? ( WS )? CL_PARENT ( WS )? DOUBLEP ( WS )? TYPE ( WS )? OP_CORCH ( wsnl )? expr CL_CORCH ;
	[GrammarRule("methodefinition")]
	private void methodefinition()
	{
		EnterRule_methodefinition();
		EnterRule("methodefinition", 6);
		TraceIn("methodefinition", 6);
		try { DebugEnterRule(GrammarFileName, "methodefinition");
		DebugLocation(17, 128);
		try
		{
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:17:17: ( OP_PARENT ( ( WS )? params_list )? ( WS )? CL_PARENT ( WS )? DOUBLEP ( WS )? TYPE ( WS )? OP_CORCH ( wsnl )? expr CL_CORCH )
			DebugEnterAlt(1);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:17:19: OP_PARENT ( ( WS )? params_list )? ( WS )? CL_PARENT ( WS )? DOUBLEP ( WS )? TYPE ( WS )? OP_CORCH ( wsnl )? expr CL_CORCH
			{
			DebugLocation(17, 19);
			Match(input,OP_PARENT,Follow._OP_PARENT_in_methodefinition159); 
			DebugLocation(17, 29);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:17:29: ( ( WS )? params_list )?
			int alt13=2;
			try { DebugEnterSubRule(13);
			try { DebugEnterDecision(13, false);
			int LA13_0 = input.LA(1);

			if ((LA13_0==WS))
			{
				int LA13_1 = input.LA(2);

				if ((LA13_1==ID))
				{
					alt13 = 1;
				}
			}
			else if ((LA13_0==ID))
			{
				alt13 = 1;
			}
			} finally { DebugExitDecision(13); }
			switch (alt13)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:17:30: ( WS )? params_list
				{
				DebugLocation(17, 30);
				// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:17:30: ( WS )?
				int alt12=2;
				try { DebugEnterSubRule(12);
				try { DebugEnterDecision(12, false);
				int LA12_0 = input.LA(1);

				if ((LA12_0==WS))
				{
					alt12 = 1;
				}
				} finally { DebugExitDecision(12); }
				switch (alt12)
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:17:31: WS
					{
					DebugLocation(17, 31);
					Match(input,WS,Follow._WS_in_methodefinition163); 

					}
					break;

				}
				} finally { DebugExitSubRule(12); }

				DebugLocation(17, 36);
				PushFollow(Follow._params_list_in_methodefinition167);
				params_list();
				PopFollow();


				}
				break;

			}
			} finally { DebugExitSubRule(13); }

			DebugLocation(17, 50);
			// C:\\Users\\Nardo\\Documents\\Visual Studio 2015\\Projects\\COOL\\LexingParsingCOOL\\COOL.g:17:50: ( WS )?
			int alt14=2;
			try { DebugEnterSubRule(14);
			try { DebugEnterDecision(14, false);
			int LA14_0 = input.LA(1);
